src/objects/pymt__Payment_Profile__c.object
<CustomObject>
    <customHelpPage>pymt__Help</customHelpPage>
    <description>Stores information locally on various recurring payment profile types (AuthNet ARB, PayPal Subscription, natively-scheduled, etc.) and supports profile management functionality (suspend, resume, cancel, etc.) through supported payment processors.</description>
    <fields>
        <fullName>pymt__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payment_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Allow_Missed_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows payments to be missed on a Scheduled Payment Profile without suspending the profile.</description>
        <inlineHelpText>If checked, allows payments to be missed on a Scheduled Payment Profile without suspending the profile.</inlineHelpText>
        <label>Allow Missed Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Subscription_Id__c</fullName>
        <inlineHelpText>Assigned by Authorize.net when an ARB profile is created.</inlineHelpText>
        <label>AuthNet Subscription Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pymt__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Company__c</fullName>
        <label>Billing Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_First_Name__c</fullName>
        <label>Billing First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Last_Name__c</fullName>
        <label>Billing Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Maestro</fullName>
                </value>
                <value>
                    <fullName>Solo</fullName>
                </value>
                <value>
                    <fullName>Diners Club</fullName>
                </value>
                <value>
                    <fullName>JCB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Category_Split_Expression__c</fullName>
        <description>Optional JSON expression used to determine Category Splits for each recurring payment when it is posted and completed.</description>
        <inlineHelpText>Optional JSON expression used to determine Category Splits for each recurring payment when it is posted and completed.</inlineHelpText>
        <label>Category Split Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Category_Split_Name__c</fullName>
        <description>This picklist may be edited by the PaymentConnect administrator to add names matching category split settings that have been configured in the PaymentConnect Admin area.</description>
        <inlineHelpText>The name of the category split expression to use when auto-splitting payments under this profile. Overrides split settings at the processor connection or application level.</inlineHelpText>
        <label>Category Split Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Don&apos;t Auto-Split</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Payment_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pymt__Currency_ISO_Code__c</fullName>
        <label>Currency ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Date_Resumed__c</fullName>
        <description>When a profile is suspended and then resumed, this value is set to the date the profile is resumed.</description>
        <inlineHelpText>When a profile is suspended and then resumed, this value is set to the date the profile is resumed.</inlineHelpText>
        <label>Date Resumed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to flag the customer&apos;s default (or preferred) credit card profile.</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Description__c</fullName>
        <inlineHelpText>Details about the payment profile.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Frequency__c</fullName>
        <inlineHelpText>Frequency of charges (e.g. every X months) for a subscription.</inlineHelpText>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__FuturePay_Id__c</fullName>
        <inlineHelpText>WorldPay recurring payment (FuturePay) Id.</inlineHelpText>
        <label>WorldPay Recurring Payment Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__IP_Address__c</fullName>
        <description>IP address from which the recurring payment profile originated.</description>
        <inlineHelpText>IP address from which the recurring payment profile originated.</inlineHelpText>
        <label>IP Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Initial_Amount__c</fullName>
        <inlineHelpText>Initial amount to charge at the beginning of the subscription.</inlineHelpText>
        <label>Initial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Invoice_Number__c</fullName>
        <description>Number to use as a root invoice number for each payment when creating recurring payments in Salesforce.</description>
        <inlineHelpText>Number to use as a root invoice number for each payment when creating recurring payments in Salesforce.</inlineHelpText>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Key__c</fullName>
        <description>Payment access key. Used to limit public access to recurring payment profile details in Sites.</description>
        <inlineHelpText>Payment access key. Used to limit public access to recurring payment profile details in Sites.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Last_4_Digits__c</fullName>
        <inlineHelpText>Last four digits of credit card used.</inlineHelpText>
        <label>Last 4 Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Next_Payment_Date__c</fullName>
        <inlineHelpText>Date of next scheduled payment.   This field is automatically updated when PayPal notifications are received containing a &quot;next payment date&quot; value.</inlineHelpText>
        <label>Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Next_Payment_Number__c</fullName>
        <description>Used to manage the rescheduling of native recurring payments.</description>
        <inlineHelpText>Used to manage the rescheduling of native recurring payments.</inlineHelpText>
        <label>Next Payment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__On_Payment_Completed__c</fullName>
        <inlineHelpText>&quot;On Payment Completed&quot; tag(s) to copy to each payment record that is auto-attached to this profile.  Multiple tags should be delimited using semi-colons.</inlineHelpText>
        <label>On Payment Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Payment_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__PayPal_Recurring_Payment_Id__c</fullName>
        <inlineHelpText>Recurring payment profile Id assigned by PayPal</inlineHelpText>
        <label>PayPal Recurring Payment Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pymt__PayPal_Subscription_Id__c</fullName>
        <inlineHelpText>ID assigned by PayPal</inlineHelpText>
        <label>PayPal Subscription Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pymt__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Payment method to use when processing scheduled payments.</inlineHelpText>
        <label>Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pymt__Payment_Method__c.pymt__Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.pymt__Contact__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pymt__Payment_Method__c</referenceTo>
        <relationshipName>Payment_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Period__c</fullName>
        <inlineHelpText>Combined with frequency to determine the time period between each subscription payment.</inlineHelpText>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>SemiMonth</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Processing_Action_Lead_Time__c</fullName>
        <description>Number of days before the scheduled payment date for each Payment to perform the scheduled processing action (e.g. Send payment request).</description>
        <inlineHelpText>Number of days before the scheduled payment date for each Payment to perform the scheduled processing action (e.g. Send payment request).</inlineHelpText>
        <label>Processing Action Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Processor_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor Connection</label>
        <referenceTo>pymt__Processor_Connection__c</referenceTo>
        <relationshipName>Payment_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Profile_Type__c</fullName>
        <label>Profile Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>AuthNet Subscription</fullName>
                </value>
                <value>
                    <fullName>PayPal Subscription</fullName>
                </value>
                <value>
                    <fullName>PayPal Recurring Payment</fullName>
                </value>
                <value>
                    <fullName>WorldPay Recurring Payment</fullName>
                </value>
                <value>
                    <fullName>Native Recurring Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Scheduled_Processing_Action__c</fullName>
        <description>Method to use when processing scheduled payments under this profile.</description>
        <inlineHelpText>Method to use when processing scheduled payments under this profile.</inlineHelpText>
        <label>Scheduled Processing Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Process using assigned Payment Method</fullName>
                </value>
                <value>
                    <fullName>Send payment request</fullName>
                </value>
                <value>
                    <fullName>Process via ACH</fullName>
                </value>
                <value>
                    <fullName>Process using default Payment Method on Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Company__c</fullName>
        <label>Ship To Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_First_Name__c</fullName>
        <label>Ship To First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Last_Name__c</fullName>
        <label>Ship To Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Postal_Code__c</fullName>
        <label>Ship To Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Ship_To_Street__c</fullName>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Shipping</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Shipping__c</fullName>
        <inlineHelpText>Recurring payment shipping amount</inlineHelpText>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Subscription_Start_Date__c</fullName>
        <inlineHelpText>Date that subscription billing is to commence.</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Subscription_Status__c</fullName>
        <label>Subscription Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Activated</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Suspended_Date__c</fullName>
        <description>Date of profile suspension.  Used to calculate next payment date and then cleared when profile is resumed.</description>
        <inlineHelpText>Date of profile suspension.  Used to calculate next payment date and then cleared when profile is resumed.</inlineHelpText>
        <label>Suspended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Tax__c</fullName>
        <inlineHelpText>Recurring payment tax amount</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Total_Amount__c</fullName>
        <description>Total recurring payment Amount</description>
        <formula>pymt__Amount__c + pymt__Tax__c + pymt__Shipping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total recurring payment Amount</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Total_Occurrences__c</fullName>
        <inlineHelpText>Number of cycles to bill during the subscription.  Empty if subscription is open-ended.</inlineHelpText>
        <label>Total Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Trial_Amount__c</fullName>
        <inlineHelpText>Amount to charge each period during the trial phase of a subscription.</inlineHelpText>
        <label>Trial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Trial_Frequency__c</fullName>
        <inlineHelpText>Frequency of charges during the trial period of a subscription (e.g. every X Months)</inlineHelpText>
        <label>Trial Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Trial_Occurrences__c</fullName>
        <inlineHelpText>Number of cycles to bill during trial period.</inlineHelpText>
        <label>Trial Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Trial_Period__c</fullName>
        <inlineHelpText>Combined with trial frequency to determine the time period between each trial subscription payment.</inlineHelpText>
        <label>Trial Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>SemiMonth</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recurring Payment</label>
    <listViews>
        <fullName>pymt__All</fullName>
        <columns>NAME</columns>
        <columns>pymt__Profile_Type__c</columns>
        <columns>pymt__Subscription_Status__c</columns>
        <columns>pymt__Subscription_Start_Date__c</columns>
        <columns>pymt__Processor_Connection__c</columns>
        <columns>pymt__Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>pymt__Native_Recurring_Payment_Profiles</fullName>
        <columns>NAME</columns>
        <columns>pymt__Profile_Type__c</columns>
        <columns>pymt__Subscription_Status__c</columns>
        <columns>pymt__Subscription_Start_Date__c</columns>
        <columns>pymt__Next_Payment_Date__c</columns>
        <columns>pymt__Scheduled_Processing_Action__c</columns>
        <columns>pymt__Total_Amount__c</columns>
        <columns>pymt__Frequency__c</columns>
        <columns>pymt__Period__c</columns>
        <columns>pymt__Total_Occurrences__c</columns>
        <columns>pymt__Allow_Missed_Payments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>pymt__Payment_Profile__c.pymt__Scheduled_Payment</value>
        </filters>
        <label>Native Recurring Payment Profiles</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Payments</pluralLabel>
    <recordTypes>
        <fullName>pymt__AuthNet_Subscription</fullName>
        <active>true</active>
        <description>Stores information about an Authorize.Net subscription (ARB).</description>
        <label>AuthNet Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__Credit_Card</fullName>
        <active>true</active>
        <description>Credit Card profile information (Requires the PaymentConnect Secure Terminal add-on)</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__Generic_Profile</fullName>
        <active>true</active>
        <description>Generic Payment Profile record type</description>
        <label>Generic Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__PayPal_Recurring_Payment</fullName>
        <active>true</active>
        <description>Stores information about a PayPal Recurring Payment profile.</description>
        <label>PayPal Recurring Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__PayPal_Subscription</fullName>
        <active>true</active>
        <description>Stores information about a PayPal subscription.</description>
        <label>PayPal Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__Scheduled_Payment</fullName>
        <active>true</active>
        <description>Native recurring payment profile (scheduled payments)</description>
        <label>Native Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__WorldPay_Recurring_Payment</fullName>
        <active>true</active>
        <description>Stores information about a WorldPay recurring payment profile.</description>
        <label>WorldPay Recurring Payment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pymt__Invalid_Scheduled_Processing_Action</fullName>
        <active>false</active>
        <description>Prevents selection of invalid scheduled processing actions</description>
        <errorConditionFormula>ISPICKVAL( pymt__Scheduled_Processing_Action__c ,&apos;Invalid Action&apos;)</errorConditionFormula>
        <errorDisplayField>pymt__Scheduled_Processing_Action__c</errorDisplayField>
        <errorMessage>The selected scheduled processing action is not supported in this version of PaymentConnect.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pymt__Scheduled_Payment_Required_Fields</fullName>
        <active>true</active>
        <description>Flags required fields for a Scheduled Payment record type</description>
        <errorConditionFormula>AND( ISPICKVAL(pymt__Profile_Type__c,  &apos;Scheduled Payment&apos;),  OR(ISNULL( pymt__Amount__c), ISBLANK(  TEXT(pymt__Period__c) ), ISBLANK(  TEXT(pymt__Frequency__c) ), ISNULL(  pymt__Subscription_Start_Date__c ), ISBLANK(  TEXT(pymt__Currency_ISO_Code__c) ) ) )</errorConditionFormula>
        <errorMessage>Required fields: Amount, Period, Frequency, Subscription Start Date, &amp; Currency ISO Code</errorMessage>
    </validationRules>
</CustomObject>